// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ApiError renders TargetingHosts 1`] = `
<LoadingState
  additionalClasses=""
  loading={false}
  loadingText="Loading"
  size="lg"
  timeout={300}
>
  <div>
    <table
      className="table table-bordered table-striped table-hover"
    >
      <thead>
        <tr>
          <th>
            Host
          </th>
          <th>
            Status
          </th>
          <th>
            Actions
          </th>
        </tr>
      </thead>
      <tbody>
        <HostItem
          actions={Array []}
          key="host"
          link="/link"
          name="host"
          status="success"
        />
      </tbody>
    </table>
  </div>
</LoadingState>
`;

exports[`ApiError renders TargetingHosts with error 1`] = `
<Alert
  className=""
  onDismiss={null}
  type="error"
>
  There was an error while updating the status, try refreshing the page.
</Alert>
`;

exports[`ApiError renders TargetingHosts with loading 1`] = `
<LoadingState
  additionalClasses=""
  loading={true}
  loadingText="Loading"
  size="lg"
  timeout={300}
>
  <div>
    <table
      className="table table-bordered table-striped table-hover"
    >
      <thead>
        <tr>
          <th>
            Host
          </th>
          <th>
            Status
          </th>
          <th>
            Actions
          </th>
        </tr>
      </thead>
      <tbody />
    </table>
  </div>
</LoadingState>
`;
